Push footer down with inline style on last <p>, to prevent global layout issues caused by style on .main p:last-child

--- a/css/custom/custom-other.less
+++ b/css/custom/custom-other.less
@@ -32,7 +32,7 @@ div {
 }
 
 section {
-	margin: 60px 0 15px;
+	margin: 40px 0 15px;
 	position: relative;
 }
 
@@ -375,11 +375,6 @@ img.pull-right {
 			padding-bottom: @padding-large-vertical;
 			border-bottom: 1px solid @brand-primary;
 			margin-bottom: -1px;
-		}
-	}
-	p:last-child {
-		@media (min-width: @screen-sm) {
-			margin-bottom: 50px;
 		}
 	}
 }
